--- a/README.Rmd
+++ b/README.Rmd
@@ -1,10 +1,12 @@
 ---
 title: "Lab 06 - Text Mining"
-output: html_document
+output: github_document
+author: liyongsh@usc.edu
 ---
 
-```{r setup}
-knitr::opts_chunk$set(eval = FALSE, include  = FALSE)
+
+```{r}
+knitr::opts_chunk$set()
 ```
 
 # Learning goals
@@ -35,9 +37,6 @@ This markdown document should be rendered using `github_document` document.
 You should load in `dplyr`, (or `data.table` if you want to work that way), `ggplot2` and `tidytext`.
 If you don't already have `tidytext` then you can install with
 
-```{r eval=FALSE}
-install.packages("tidytext")
-```
 
 ### read in Medical Transcriptions
 
@@ -46,11 +45,11 @@ Loading in reference transcription samples from https://www.mtsamples.com/
 ```{r warning=FALSE, message=FALSE}
 library(readr)
 library(dplyr)
-mt_samples <- read_csv("https://raw.githubusercontent.com/USCbiostats/data-science-data/master/00_mtsamples/mtsamples.csv")
+library(tidyverse)
+library(ggplot2)
+mt_samples <- read_csv("mtsamples.csv")
 mt_samples <- mt_samples %>%
   select(description, medical_specialty, transcription)
-
-head(mt_samples)
 ```
 
 ---
@@ -59,12 +58,16 @@ head(mt_samples)
 
 We can use `count()` from `dplyr` to figure out how many different catagories do we have? Are these catagories related? overlapping? evenly distributed?
 
+
+
 ```{r}
 mt_samples %>%
-  count(___, sort = TRUE)
+  count(medical_specialty,sort = TRUE) %>%
+  ggplot(aes(medical_specialty,n))+geom_col()+coord_flip()
+
 ```
 
----
+We have 40 categories in total. The categories may be related or overlapping since each observation may be involved in  different specialities. For example, Urology may involves some patient cases which may need Surgery.
 
 ## Question 2
 
@@ -74,7 +77,23 @@ mt_samples %>%
 
 Explain what we see from this result. Does it makes sense? What insights (if any) do we get?
 
----
+```{r}
+library(tidytext)
+library(ggplot2)
+
+mt_samples %>%
+   unnest_tokens(word, transcription) %>%
+   count(word, sort = TRUE) %>%
+   top_n(20, n) %>%
+   ggplot(aes(word,n)) + geom_col() +coord_flip()
+
+
+```
+
+
+The top 20 frequent words enrich in those words which may provide less semantic meanings such as the, is, of. These words are called stop words. However, we can still see a reasonable word "patient" since these are medical transcription samples. 
+
+
 
 ## Question 3
 
@@ -83,23 +102,100 @@ Explain what we see from this result. Does it makes sense? What insights (if any
 
 What do we see know that we have removed stop words? Does it give us a better idea of what the text is about?
 
----
+
+```{r}
+mt_samples %>%
+   unnest_tokens(word, transcription) %>%
+   anti_join(stop_words, by = "word") %>%
+   subset(!grepl('^\\d+$', word)) %>%
+   count(word, sort = TRUE) %>%
+   top_n(20, n) %>%
+   ggplot(aes(word,n)) + geom_col() + coord_flip()
+```
+
+
+
+The top 20 frequent words look more informative when we removed the stop words and numbers. These words are clear symbols of medical transcriptions which involve organs, symptoms and so on.
+
+
+
+
 
 # Question 4
 
 repeat question 2, but this time tokenize into bi-grams. how does the result change if you look at tri-grams?
 
----
+```{r}
+mt_samples %>%
+   unnest_ngrams(ngram, transcription, n = 2) %>%
+   count(ngram, sort = TRUE) %>%
+   top_n(20, n) %>%
+   ggplot(aes(ngram,n)) + geom_col() + coord_flip()
+mt_samples %>%
+   unnest_ngrams(ngram, transcription, n = 3) %>%
+   count(ngram, sort = TRUE) %>%
+   top_n(20, n) %>%
+   ggplot(aes(ngram,n)) + geom_col() + coord_flip()
+```
+
+The results return similar to what we see in question 2: bi-grams comprised of stop words occupy the most parts. If we try tri-grams, the results may include some meaningful words like illness, medical, history.
+
+
+
+
 
 # Question 5
 
 Using the results you got from questions 4. Pick a word and count the words that appears after and before it.
 
----
+
+```{r}
+mt_samples %>%
+   unnest_ngrams(ngram, transcription, n = 2) %>%
+   separate(ngram, into = c("word1", "word2"), sep = " ") %>%
+   select(word1, word2) %>%
+   filter(word1 == "patient") %>%
+   count(word2, sort = TRUE)
+
+mt_samples %>%
+   unnest_ngrams(ngram, transcription, n = 2) %>%
+   separate(ngram, into = c("word1", "word2"), sep = " ") %>%
+   select(word1, word2) %>%
+   filter(word2 == "patient") %>%
+   count(word1, sort = TRUE)
+```
+The first table shows the words appearing after the word "patient".
+The second table shows the words appearing before the word "patient".
+
+
 
 # Question 6 
 
 Which words are most used in each of the specialties. you can use `group_by()` and `top_n()` from `dplyr` to have the calculations be done within each specialty. Remember to remove stopwords. How about the most 5 used words?
+
+```{r}
+mt_samples %>%
+   unnest_tokens(word, transcription) %>%
+   anti_join(stop_words, by = "word") %>%
+   subset(!grepl('^\\d+$', word)) %>%
+   group_by(medical_specialty) %>%
+   count(word,sort=TRUE) %>%
+   top_n(1,n)
+
+
+mt_samples %>%
+   unnest_tokens(word, transcription) %>%
+   anti_join(stop_words, by = "word") %>%
+   subset(!grepl('^\\d+$', word)) %>%
+   group_by(medical_specialty) %>%
+   count(word,sort=TRUE) %>%
+   top_n(5,n) %>%
+   arrange(desc(medical_specialty))
+```
+
+The first table shows the most used words in each of the specialities.  The second table shows the most 5 used words in each of the specialities.  
+
+
 
 # Question 7 - extra
 
@@ -109,3 +205,30 @@ Ideas:
 
 - Interesting ngrams
 - See if certain words are used more in some specialties then others
+```{r}
+mt_samples %>%
+   unnest_tokens(word, transcription) %>%
+   anti_join(stop_words, by = "word") %>%
+   subset(!grepl('^\\d+$', word)) %>%
+   group_by(medical_specialty) %>%
+   count(word,sort=TRUE) %>%
+   top_n(1,n) %>%
+   ggplot(aes(medical_specialty, n, fill=word)) +geom_col()+ coord_flip()
+```
+
+
+Based on the above graph, we can see "patient" is absolutely the most frequent word in most of the medical specialties. However, "eye" is more frequently used in Ophthalmology since Ophthalmology is right focusing on eye-related diseases.
+
+
+```{r}
+mt_samples %>%
+   unnest_ngrams(ngram, transcription, n = 4) %>%
+   count(ngram, sort = TRUE) %>%
+   top_n(20, n) %>%
+   ggplot(aes(ngram,n)) + geom_col() + coord_flip()
+```
+
+
+From the quadra-gram results, we can infer that many sentences are recorded using passive voice such as "was taken to", "was placed in", "was brought to" and so on. I guess this might be a medical transcription style.
+
+
